<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/relativeLayout1"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" >
		<com.example.chensanqi.ChessBoard
		     android:id="@+id/chessBoard"
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:layout_alignParentLeft="true"
		     android:layout_alignParentRight="true"
		     android:layout_alignParentTop="true" />
		<TextView
		    android:id="@+id/title_type"
		    android:text="@string/sigle_player"
		    android:layout_width="match_parent"
		    android:layout_height="48dip"
		    android:textSize="20sp"
		    android:textColor="#EE555555"
		    android:gravity="center_vertical"
		    android:background="#22FFFFFF"/>
		<TextView
		    android:id="@+id/aboutBt"
		    android:background="@drawable/tanhao_icon"
		    android:layout_marginTop="12dip"
		    android:layout_alignParentRight="true"
		    android:layout_marginRight="10dip"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" />
		<LinearLayout android:layout_alignParentTop="true"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="52dip"
		    android:orientation="vertical">
			<TextView android:id="@+id/chess_tip"
			    android:text="@string/chess_tip"
			    android:layout_width="match_parent"
			    android:layout_height="30dip"
			    android:textSize="16sp"
			    android:textColor="#EEFFFFFF"
			    android:gravity="center_vertical" />
			<LinearLayout
			    android:layout_marginRight="15dip"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="right"
			    android:orientation="horizontal">
				 <TextView
				     android:background="@drawable/black"
				     android:layout_width="wrap_content"
				     android:layout_height="wrap_content"/>
				 <TextView 
				     android:id="@+id/player_black_result"
				     android:text="@string/player_black_result"
				     android:textColor="#88000000"
				     android:gravity="center_vertical"
				     android:layout_width="wrap_content"
				     android:layout_height="match_parent" />
			</LinearLayout>
		</LinearLayout>
		<RelativeLayout android:layout_alignParentBottom="true"
		    android:layout_width="match_parent"
		    android:layout_height="240dip"
		    android:padding="5dip" >
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:orientation="horizontal">
				 <TextView
				     android:background="@drawable/white"
				     android:layout_gravity="center_vertical"
				     android:layout_width="wrap_content"
				     android:layout_height="wrap_content"/>
				 <TextView 
				     android:id="@+id/player_white_result"
				     android:text="@string/player_white_result"
				     android:textColor="#AAFFFFFF"
				     android:gravity="center_vertical"
				     android:layout_width="wrap_content"
				     android:layout_height="match_parent" />
			</LinearLayout>
			     
		    <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_alignParentBottom="true"
		        android:orientation="horizontal" >
				<Button
					android:id="@+id/restartBt"
					android:layout_width="match_parent"
					android:layout_height="48dip"
					android:text="@string/menu_start"
					android:textColor="#88000000"
					android:layout_weight="1"
					android:onClick="restartBt" />
				 
				 <Button
					  android:id="@+id/typeBt"
					  android:layout_width="match_parent"
					  android:layout_height="48dip"
					  android:text="@string/menu_double"
					  android:textColor="#88000000"
					  android:layout_weight="1"
					  android:onClick="typeBt"
					  android:visibility="gone" />

				 <Button android:id="@+id/undoBt"
				      android:layout_width="match_parent"
					  android:layout_height="48dip"
					  android:text="@string/menu_undo"
					  android:textColor="#88000000"
					  android:layout_weight="1"
					  android:onClick="undoBt"
					  android:visibility="gone"/>

				 <Button android:id="@+id/reselectBt"
				      android:layout_width="match_parent"
					  android:layout_height="48dip"
					  android:text="@string/menu_reselect"
					  android:textColor="#88000000"
					  android:layout_weight="1"
					  android:onClick="reselectBt"/>
				 <Button
					  android:id="@+id/shareBt"
					  android:layout_width="match_parent"
					  android:layout_height="48dip"
					  android:text="@string/menu_share"
					  android:textColor="#88000000"
					  android:layout_weight="1"
					  android:onClick="shareBt" />
				 
				 <Button
					  android:id="@+id/ruleBt"
					  android:layout_width="match_parent"
					  android:layout_height="48dip"
					  android:text="@string/menu_rules"
					  android:textColor="#88000000"
					  android:layout_weight="1"
					  android:onClick="ruleBt" />
			 </LinearLayout>
	</RelativeLayout>
</RelativeLayout>