<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#55EEEEEE" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dip">
        <ImageView
            android:id="@+id/app_icon"
            android:src="@drawable/ic_launcher"
            android:layout_width="96dip"
            android:layout_height="96dip"
            android:contentDescription="app_icon"
            android:layout_centerInParent="true"
            android:layout_margin="10dip"/>
        <TextView
            android:layout_below="@id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dip">
        <TextView
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:text="@string/feedback"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"/>
        <TextView
            android:id="@+id/app_desc"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:text="@string/app_desc"/>
        <TextView android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="#33000000"/>
        <TextView
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:gravity="center_vertical"
            android:text="@string/update"/>
    </LinearLayout>
</LinearLayout>
